feat: Add initial configuration files and implement unit tests for services

--- a/.prettierignore
+++ b/.prettierignore
@@ -7,14 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.output
+.nuxt
 node_modules
 dist
-dist-ssr
 *.local
+public
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -22,3 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+coverage
